<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background"
    tools:context=".MainActivity" >

    <TextView
        android:id="@+id/hidden_value"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/chooseGame"
        android:layout_alignParentTop="true"
        android:layout_alignRight="@+id/chooseGame"
        android:layout_marginTop="41dp"
        android:gravity="center"
        android:text="@string/landVersion"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:textColor="#fff" 
        android:textSize="30dp"/>

    <Button
        android:id="@+id/addToReminder"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/chooseGame"
        android:layout_alignRight="@+id/chooseGame"
        android:layout_below="@+id/chooseGame"
        android:text="@string/adder"
        android:textColor="#fff" />

    <TextView
        android:id="@+id/monthTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="29dp"
        android:text="@string/version"
        android:textColor="#fff"
        android:textSize="20dp" />

    <Button
        android:id="@+id/checkMyChosenEvents"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/addToReminder"
        android:layout_alignRight="@+id/addToReminder"
        android:layout_below="@+id/addToReminder"
        android:text="@string/checkMyChosenEvents"
        android:textColor="#fff" />

    <Button
        android:id="@+id/chooseGame"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/hidden_value"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="48dp"
        android:onClick="onClick"
        android:text="@string/choose_game"
        android:textColor="#fff" />

</RelativeLayout>